--- a/house.gov.by/0f95b7f2059a5363c756684287725e57d866f43a.yml
+++ b/house.gov.by/0f95b7f2059a5363c756684287725e57d866f43a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 08:21:07 GMT
+    - Sun, 22 Oct 2017 11:26:23 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=vaumie8mp9bajqeqkphrti0d24; path=/
+    - PHPSESSID=mhqrfuftq8eetcsluo4ck9ss56; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 08:21:08 GMT
+recorded_at: Sun, 22 Oct 2017 11:26:24 GMT
