--- a/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
+++ b/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 06:37:28 GMT
+    - Mon, 23 Oct 2017 12:48:49 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=n1pii4atkvsp9tu72fa8j62er1; path=/
+    - PHPSESSID=u2m44vfms55u70mv1fnu2gtbr5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 06:37:29 GMT
+recorded_at: Mon, 23 Oct 2017 12:48:50 GMT
