--- a/house.gov.by/97a79bb3d86184e516b5559a415c581e7f5221ce.yml
+++ b/house.gov.by/97a79bb3d86184e516b5559a415c581e7f5221ce.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:42:08 GMT
+    - Mon, 23 Oct 2017 12:50:17 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=jn9nlj5aihvoh484c5ft1p6h03; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:42:09 GMT
+recorded_at: Mon, 23 Oct 2017 12:50:17 GMT
