--- a/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
+++ b/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 11:02:28 GMT
+    - Mon, 23 Oct 2017 12:52:06 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=mmc0hghcql168v7siigdp6a377; path=/
+    - PHPSESSID=m76p6p3hjvam28sajjmnpg0mk5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 11:02:28 GMT
+recorded_at: Mon, 23 Oct 2017 12:52:07 GMT
