--- a/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
+++ b/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:27:50 GMT
+    - Mon, 23 Oct 2017 13:01:07 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=cnodajn5v7vjj9s67n2os9j5h7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:27:50 GMT
+recorded_at: Mon, 23 Oct 2017 13:01:08 GMT
