--- a/house.gov.by/d598141b9b8846a40829a7d6da6d78656d7936d8.yml
+++ b/house.gov.by/d598141b9b8846a40829a7d6da6d78656d7936d8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:09:27 GMT
+    - Mon, 23 Oct 2017 13:04:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=kp2eobipt0e80atpjre1nh2n07; path=/
+    - PHPSESSID=t0beogqkv8ggdkt4i9mhlrfuh6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:09:27 GMT
+recorded_at: Mon, 23 Oct 2017 13:04:16 GMT
