--- a/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
+++ b/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:30:22 GMT
+    - Mon, 23 Oct 2017 13:13:24 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=q8l7afas0t7u6rs47fa1cb7df1; path=/
+    - PHPSESSID=k6dol61r3n3tulp7a7eam9lfn3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:30:22 GMT
+recorded_at: Mon, 23 Oct 2017 13:13:25 GMT
