--- a/house.gov.by/8b5ca28f81b46336cbf4376e4824fa6d31e21f74.yml
+++ b/house.gov.by/8b5ca28f81b46336cbf4376e4824fa6d31e21f74.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:48:58 GMT
+    - Mon, 23 Oct 2017 13:29:20 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=b97l16703lghaugkpmn20dpgr4; path=/
+    - PHPSESSID=5act4nnqd2615kba3c64d3b776; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:48:59 GMT
+recorded_at: Mon, 23 Oct 2017 13:29:21 GMT
