--- a/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
+++ b/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:46:19 GMT
+    - Mon, 23 Oct 2017 13:36:39 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=e0fg1dl7v7lj0cbulm9pk01mq3; path=/
+    - PHPSESSID=2tn1b7p28sdapg1fhsoh576ja2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:46:19 GMT
+recorded_at: Mon, 23 Oct 2017 13:36:39 GMT
