--- a/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
+++ b/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:07:12 GMT
+    - Mon, 23 Oct 2017 13:41:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=1f0avff8u6obmc9g6led3rr3v5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:07:12 GMT
+recorded_at: Mon, 23 Oct 2017 13:41:20 GMT
