--- a/house.gov.by/ececcc5f7fc294e39414b4bd63fc9da75f48b6aa.yml
+++ b/house.gov.by/ececcc5f7fc294e39414b4bd63fc9da75f48b6aa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:32:11 GMT
+    - Mon, 23 Oct 2017 13:45:16 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=btk2hr822717u97kid1dbinja2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:32:12 GMT
+recorded_at: Mon, 23 Oct 2017 13:45:16 GMT
