--- a/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
+++ b/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 10:33:09 GMT
+    - Mon, 23 Oct 2017 13:47:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=lpge7el0t0sl4lginhm0iuutd7; path=/
+    - PHPSESSID=giekf5bq6lr2gc0me09eognjt0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 10:33:11 GMT
+recorded_at: Mon, 23 Oct 2017 13:47:44 GMT
