--- a/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
+++ b/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 11:32:44 GMT
+    - Mon, 23 Oct 2017 14:23:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=q2mqdb7tj2knrviami7nvu6qs2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - UPDATING
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 11:32:45 GMT
+recorded_at: Mon, 23 Oct 2017 14:23:52 GMT
