--- a/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
+++ b/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 11:11:13 GMT
+    - Mon, 23 Oct 2017 14:26:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=lupi2cjgo1vop38nadgqa3n7n4; path=/
+    - PHPSESSID=er6vhatmn1ell5if1b2tllm967; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 11:11:14 GMT
+recorded_at: Mon, 23 Oct 2017 14:26:09 GMT
