--- a/house.gov.by/f41f444c7a764ed71f281b666413f647e81275cf.yml
+++ b/house.gov.by/f41f444c7a764ed71f281b666413f647e81275cf.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 14:13:14 GMT
+    - Mon, 23 Oct 2017 14:41:07 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=396rnb7i5f50pcs9a3m0g9h8l7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 14:13:15 GMT
+recorded_at: Mon, 23 Oct 2017 14:41:07 GMT
