--- a/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
+++ b/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 13:18:36 GMT
+    - Mon, 23 Oct 2017 14:49:57 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=u0s1bkjtumfmag7mp8aimvld64; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 13:18:36 GMT
+recorded_at: Mon, 23 Oct 2017 14:49:57 GMT
