--- a/house.gov.by/468b1dd6f4bdbfacd90f0dc4afeda682cf6713f2.yml
+++ b/house.gov.by/468b1dd6f4bdbfacd90f0dc4afeda682cf6713f2.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 14:06:41 GMT
+    - Mon, 23 Oct 2017 15:32:02 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=pgnrqtl4s7ru9ks03ev7s57ch7; path=/
+    - PHPSESSID=4qttgb7smh77io2vnp8o1b97a1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 14:06:41 GMT
+recorded_at: Mon, 23 Oct 2017 15:32:03 GMT
