--- a/house.gov.by/76dc4576924b978602033dde12bf7f1b1d0aaaf9.yml
+++ b/house.gov.by/76dc4576924b978602033dde12bf7f1b1d0aaaf9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 13:28:11 GMT
+    - Mon, 23 Oct 2017 15:34:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=f3pslh2bd8uulngth9al1n0gd1; path=/
+    - PHPSESSID=emsb0mfil2mvsd6nokuh7la6f1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 13:28:12 GMT
+recorded_at: Mon, 23 Oct 2017 15:34:16 GMT
